--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,26 @@
-title: Minimal theme
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
-theme: jekyll-theme-minimal
+title: WebVR India
+author: webvr-india team
+email: webvr-india@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Web VR India. Web VR India. Web VR India. Web VR India. 
+
+twitter_username: webvr-india
+github_username: webvr-india
+telegram_groupname: WebVRIndia
+
+# Minima date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+minima:
+  date_format: "%b %-d, %Y"
+
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+#header_pages:
+# - about.html
+
+# Build settings
+markdown: kramdown
+theme: minima
+exclude:
+  - Gemfile
+  - Gemfile.lock
