--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,7 @@ title: WebVR India
 author: webvr-india team
 email: webvr-india@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Web VR India. Web VR India. Web VR India. Web VR India.	
-
+        "WebVR is an open standard that makes it possible to experience VR in your browser. The goal is to make it easier for everyone to get into VR experiences, no matter what device you have while AFrame takes away all the boilerplate code and let's you create Virtual Reality scenes using just HTML."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
