all wiki content imported

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ layout_dir: _layouts
 collections:
     posts:
         output: true
-
+    community:
+        output: true
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
